# FinOS

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  MILESTONES.md  Makefile  README.md  SECURITY.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  pagination.py  schemas.py
backend/app/core/: config.py  errors.py  logging.py  middleware.py  security.py
backend/app/db/: all_models.py  base.py  sequence.py  session.py
backend/app/domain/: __init__.py  budgets.py  clock.py  detection.py  enums.py  events.py  forecasting.py  goals.py  ids.py  insights.py  ledger.py  money.py  recurrence.py  reporting.py  reviews.py  rules.py  simulation.py  subscriptions.py
backend/app/events/: __init__.py  bus.py  dispatcher.py  handlers.py  outbox.py
backend/app/llm/: __init__.py
backend/app/modules/: __init__.py
backend/app/workers/: celery_app.py
backend/migrations/: env.py
backend/migrations/versions/: 81b84ddfbdc3_financial_planning_layer.py  8eab1c0437c0_product_experience_layer.py  (+1 more)
backend/tests/: conftest.py  test_architecture.py  test_auth.py  test_budgets.py  test_detection.py  test_events.py  test_forecasting.py  test_goals.py  test_health.py  test_ids.py  test_insights_domain.py  test_integration_ledger.py  test_integration_planning.py  test_integration_px.py  test_integration_sync.py  test_ledger.py  test_money.py  test_recurrence.py  test_reporting.py  test_reviews_domain.py  test_rules.py  test_simulation.py  test_subscriptions.py
docs/: AI.md  API.md  (+18 more)
(+125 files in other folders)
